# NeteaseTSBot

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.voice-service  Dockerfile.web  HOWTOSTART.md  LOGGING.md  Makefile  README.en.md  README.md  TODO  docker-compose.yml  nohup-start.sh  nohup-status.sh  nohup-stop.sh  package-lock.json  run-backend.ps1  run-backend.sh  run-voicemake.ps1  run-voicemake.sh  run-web.ps1  run-web.sh  setup.sh  tsbot.env  tsbot.env.example
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
backend/: .env.example  auth.py  config.py  crypto.py  db.py  grpc_codegen.py  logger.py  main.py  migrate_history.py  models.py  netease.py  qqmusic.py  requirements.txt  voice_client.py
backend/_generated/: voice_pb2.py  voice_pb2_grpc.py
data/: config.json
proto/: voice.proto
scripts/: Import-TsbotEnv.ps1  log-viewer.sh  unified-logger.sh
voice-service/: CMakeLists.txt  Cargo.toml  build.rs
voice-service/src/: logger.rs  main.cpp  main.rs
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.vue  api.ts  main.ts  router.ts  style.css
web/src/components/: EmptyState.vue  LoadingSpinner.vue  LyricsDisplay.vue  MusicPlayer.vue  PlaylistView.vue  QQMusicLogin.vue
web/src/utils/: favorites.ts  logger.ts  queue.ts
web/src/views/: CookieView.vue  FavoritesView.vue  HistoryView.vue  LikesView.vue  LoginView.vue  LyricsView.vue  PlaylistDetailView.vue  PlaylistsView.vue  QueueView.vue  RegisterView.vue  SearchView.vue
