[package]
name = "voice-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
audiopus = "0.3.0-rc.0"
bytes = "1"
futures = "0.3"
prost = "0.12"
prost-types = "0.12"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "time", "sync", "signal"] }
tokio-stream = { version = "0.1", features = ["sync", "net"] }
tokio-util = "0.7"
tonic = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
tsclientlib = { version = "0.2.0", features = ["unstable"] }
tsproto-packets = "0.1"

[build-dependencies]
tonic-build = "0.11"
